Small fix to the default search template and added z-index css rule for dev popup.

--- a/public/stylesheets/zena.css
+++ b/public/stylesheets/zena.css
@@ -54,7 +54,7 @@ table.errors td { padding:2px 5px; background:inherit; border:none;}
 
 /* dev */
 #dev { background:#CABFA6; font-size:10px; position:fixed; bottom:5px; right:5px; 
-padding:5px; border:1px solid #714D3D; text-align:left; color:#444;}
+padding:5px; border:1px solid #714D3D; text-align:left; color:#444; z-index:9999;}
 #dev a { color:inherit; }
 #dev ul, #dev li { margin:0; padding:0; list-style:none; background:none; list-style-image:none;}
 #dev a.group { font-weight:bold; color:#222; display:block;}
